Image alignment fix

--- a/view/frontend/web/css/style.css
+++ b/view/frontend/web/css/style.css
@@ -33,6 +33,5 @@
     max-width: 50px;
     position: fixed;
     bottom: 50px;
-    left: 20px;
     cursor: pointer;
 }
